--- a/three_line/templates/history.html
+++ b/three_line/templates/history.html
@@ -5,17 +5,41 @@ history
 {% endblock %}
 
 {% block content %}
-{% for s in data %}
-    <ul>
-        <li>{{s.id}}</li>
-        <li>{{s.create_date}}</li>
-        <li>{{s.modified}}</li>
-        <li>{{s.title}}</li>
-        <li>{{s.content}}</li>
-        <li>{{s.result_1}}</li>
-        <li>{{s.result_2}}</li>
-        <li>{{s.result_3}}</li>
-    </ul>
-    <br>
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+{% for message in messages %}
+<div class="alert alert-success alert-dismissible fade show" role="alert">
+    {{message}}
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
 {% endfor %}
+{% endif %}
+{% endwith %}
+<table class="table" style="font-size: smaller;">
+    <thead>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">제목</th>
+            <th scope="col">세줄요약</th>
+            <th scope="col" style="min-width: 70px;"></th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for s in data %}
+        <tr>
+            <th scope="row">{{s.id}}</th>
+            <td><span>{{s.title}}</span><br>
+                <a tabindex="0" class="btn btn-sm btn-dark mt-2" role="button" data-bs-toggle="popover"
+                    data-bs-trigger="focus" title="{{s.title}}" data-bs-content="{{s.content}}">원문 보기
+                </a>
+            </td>
+            <td>{{s.result_1}}<br>{{s.result_2}}<br>{{s.result_3}}<br><small class="fst-italic">({{s.modified}})</small>
+            </td>
+            <td><a href="{{url_for('main.update', summary_id=s.id)}}"
+                    class="btn btn-sm btn-outline-secondary mb-1">수정</a><br><a
+                    href="{{url_for('main.delete', summary_id=s.id)}}" class="btn btn-sm btn-danger">삭제</a></td>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
 {% endblock %}
