--- a/three_line/templates/home.html
+++ b/three_line/templates/home.html
@@ -5,5 +5,14 @@ home
 {% endblock %}
 
 {% block content %}
-home page
+<h2>"세줄 요약"</h2>
+<p>너무 긴 글은 인터넷상에서 읽히기 어렵습니다. AI를 이용한 세줄 요약기를 통해 어떠한 글이든 세줄로 만들어보세요.</p>
+<span>✅ 사용법 및 주의사항</span>
+    <ul>
+        <li>한글만 지원</li>
+        <li>최대 2000자 (제목 포함)</li>
+        <li>이미 너무 짧은 글인 경우 에러가 날 수 있습니다</li>
+    </ul>
+<p>요약한 결과는 <a href="{{url_for('main.history')}}">히스토리</a>에 저장되며 마음에 들지 않는 요약본은 직접 수정도 가능합니다.</p>
+<a class="btn btn-primary btn-lg" href="{{url_for('main.summarize')}}">지금 요약해보기</a>
 {% endblock %}
